--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nursing Care & Ambulance Service At Affordable Rate</title>
+  <title>Nursing Care Service in Patna At Affordable Rate</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
       <div class="text">
         <h2>About Our Website</h2>
         <p>
-          Our platform connects families with experienced nurses to ensure quality care for elderly loved ones as well as 
+          Our platform, patnanursingcare.in, connects families with experienced nurses to ensure quality care for elderly loved ones as well as 
           patients in dire need. This website is an honest effort to make home nursing affordable as well as reliable and 
           fill the huge gap and unethical malpractices prevailing in this feild. 
         <p>
@@ -114,7 +114,7 @@
 </div>
 
 <footer>
-  <p>&copy; 2024 CareForElderly&Patients. All rights reserved.</p>
+  <p>&copy; 2024 patnanursingcare. All rights reserved.</p>
 </footer>
 
 </body>
