--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nursing Care Service in Patna At Affordable Rate</title>
+  <title>Affordable and Reliable Nursing Care Service in Patna</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
